objects/InsurancePolicy.object
<CustomObject>
    <fields>
        <fullName>AW_AUMSourceExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The external ID of the Assets Under Management source system</description>
        <externalId>true</externalId>
        <label>AUM Source External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AW_AccidentalDeath__c</fullName>
        <description>Accidental Death Amount</description>
        <label>Accidental Death</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_AccidentalDisability__c</fullName>
        <description>Accidental Disability Amount</description>
        <label>Accidental Disability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_AnnualBenefitsIncreaseABI__c</fullName>
        <description>Used for integration to populate Automatic Benefit Increase Type (ABI)  from source systems (Compass/Lifestyle). Field Label was updated from Annual Benefits Increase (ABI) to Automatic Benefits Increase (ABI) however API Name was not updated to reduce impact on code.</description>
        <label>Automatic Benefits Increase (ABI)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_AnnualContributionIncreaseACI__c</fullName>
        <description>Used for integration to populate Automatic Contribution Increase (ACI) from source systems (Compass/Lifestyle). Field Label was updated from Annual Contribution Increase (ACI) to Automatic Contribution Increase (ACI) however API name was not updated to reduce impact on code.</description>
        <label>Automatic Contribution Increase (ACI)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CommencementDate__c</fullName>
        <description>Commencement Date of Insurance</description>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_CoverGrowthEscalation__c</fullName>
        <description>Percentage of Cover Growth Escalation</description>
        <label>Cover Growth Escalation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_CurrentValue__c</fullName>
        <description>Current Value of Insurance Policy</description>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_DeathIncome__c</fullName>
        <description>Income in case of death</description>
        <label>Death Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_DeathLumpSum__c</fullName>
        <description>Lump Sum amount in case of death</description>
        <label>Death Lump Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_DisabilityIncome__c</fullName>
        <description>Income in case of disability</description>
        <label>Disability Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_DisabilityLumpSum__c</fullName>
        <description>Lump Sum amount in case of disability</description>
        <label>Disability Lump Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_DreadDisease__c</fullName>
        <description>Dread Disease Amount</description>
        <label>Dread Disease</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_FinancialGoal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related financial goal</description>
        <label>Financial Goal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FinServ__FinancialGoal__c.FinServ__PrimaryOwner__c</field>
                <operation>equals</operation>
                <valueField>$Source.NameInsuredId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FinServ__FinancialGoal__c</referenceTo>
        <relationshipLabel>Insurance Policies</relationshipLabel>
        <relationshipName>Insurance_Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_Frequency__c</fullName>
        <description>Enter Frequency</description>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_FunctionalImpairment__c</fullName>
        <description>Functional Impairment Amount</description>
        <label>Functional Impairment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_FundType__c</fullName>
        <description>Enter Fund Type</description>
        <label>Fund Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_InsurancePolicyName__c</fullName>
        <description>Select Insurance Policy Name</description>
        <label>Insurance Policy Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AW_ProductTypeCode__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UNIVERSAL LIFE</fullName>
                </value>
                <value>
                    <fullName>MEDICAL LIFESTYLE</fullName>
                </value>
                <value>
                    <fullName>LIFESTYLE INCOME PROTECTION</fullName>
                </value>
                <value>
                    <fullName>GUARANTEED REVIEWABLE LIFESTYLE</fullName>
                </value>
                <value>
                    <fullName>TERM SELECT</fullName>
                </value>
                <value>
                    <fullName>LIFESTYLE PENTA PLUS</fullName>
                </value>
                <value>
                    <fullName>LIVABILITY</fullName>
                </value>
                <value>
                    <fullName>LIBERTY LIFESTYLE PROTECTOR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_InvestmentValue__c</fullName>
        <description>The amount invested</description>
        <label>Investment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Last_Updated_Date_from_Source__c</fullName>
        <description>Last Update Date and Time</description>
        <label>Source Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_MasterAccountId__c</fullName>
        <description>Used to store the Master Account Id, if Master Account Exists for the Active Account</description>
        <formula>IF(NOT(ISBLANK(NameInsured.AW_ParentAccount__c)),NameInsured.AW_ParentAccount__c,NameInsuredId)</formula>
        <label>AW_MasterAccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_MasterAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the Master Account Details</description>
        <label>MasterAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Insurance Policies (MasterAccount)</relationshipLabel>
        <relationshipName>Insurance_Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_MaturityDate__c</fullName>
        <description>Maturity Date of Insurance Policy</description>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_Owner_UACFID__c</fullName>
        <description>Owner UACFID</description>
        <formula>Owner:User.AW_UACFID__c</formula>
        <label>Owner UACFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PaidUpValue__c</fullName>
        <description>This field is used to store the paid-up value associated with an insurance policy</description>
        <label>Paid up Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_ParentAccountOwnerId__c</fullName>
        <description>Used to store the Parent Account Owner Id</description>
        <formula>IF(NOT(ISNULL(NameInsured.Id)),NameInsured.OwnerId,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AW_ParentAccountOwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PaymentMethodCode__c</fullName>
        <description>This field represents the payment method code associated with an insurance policy</description>
        <label>Payment Method Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PaymentMethod__c</fullName>
        <description>This field is designed to store information about the payment method associated with an insurance policy</description>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PolicyCategory__c</fullName>
        <description>Select Policy Category</description>
        <label>PolicyCategory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Protection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_PolicySubCategory__c</fullName>
        <description>Select Policy Sub Category</description>
        <label>PolicySubCategory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Life Cover</fullName>
                </value>
                <value>
                    <fullName>Income Protection (Critical Illness)</fullName>
                </value>
                <value>
                    <fullName>Critical Illness</fullName>
                </value>
                <value>
                    <fullName>Disability Lumpsum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_PremiumFrequencyCode__c</fullName>
        <description>Premium Frequency Code</description>
        <label>Premium Frequency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PremiumGrowthEscalation__c</fullName>
        <description>Percentage of Premium Growth Escalation</description>
        <label>Premium Growth Escalation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_PremiumPatternCode__c</fullName>
        <description>Premium Pattern Code</description>
        <label>Premium Pattern Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PremiumPattern__c</fullName>
        <description>Premium Pattern</description>
        <label>Premium Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ProductTypeCode__c</fullName>
        <description>Select Product Code</description>
        <label>Product Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_RD_CommencementDateTime__c</fullName>
        <description>This Field replicates the Commencement Date field( AW_CommencementDate__c). This was created in order to use this as a Dashboard filter( Converted from Date data type to Date/Time data type ).</description>
        <formula>DATETIMEVALUE( AW_CommencementDate__c )</formula>
        <label>Commencement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_Roles__c</fullName>
        <description>Enter Roles</description>
        <label>Roles</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AW_ServiceProvider__c</fullName>
        <description>Service Provider Name</description>
        <label>Service Provider</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Source_System_Name__c</fullName>
        <description>Select Source System Name</description>
        <label>Source System Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>atWork</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Avalon</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>BPNB</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>SFDC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_StatusReasonCode__c</fullName>
        <description>Code for Status Reason</description>
        <label>Status Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_StatusReason__c</fullName>
        <description>Short Description of Status Change</description>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_TargetReturn__c</fullName>
        <description>The percentage of return</description>
        <label>Target Return</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_TotalCriticalIllnessCover__c</fullName>
        <description>Total amount of cover in case of critical illness</description>
        <label>Total Critical Illness Cover</label>
        <summarizedField>InsurancePolicyCoverage.AW_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>InsurancePolicyCoverage.AW_Type__c</field>
            <operation>equals</operation>
            <value>Critical Illness Cover</value>
        </summaryFilterItems>
        <summaryForeignKey>InsurancePolicyCoverage.InsurancePolicyId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AW_TotalDisabilityCoverLumpsum__c</fullName>
        <description>Total Disability Cover Lumpsum</description>
        <label>Total Disability Cover (Lumpsum)</label>
        <summarizedField>InsurancePolicyCoverage.AW_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>InsurancePolicyCoverage.AW_Type__c</field>
            <operation>equals</operation>
            <value>Disability Lump</value>
        </summaryFilterItems>
        <summaryForeignKey>InsurancePolicyCoverage.InsurancePolicyId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AW_TotalDisabilityCoverMonth__c</fullName>
        <description>The total number of months covered in disability</description>
        <label>Total Disability Cover ( Month)</label>
        <summarizedField>InsurancePolicyCoverage.AW_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>InsurancePolicyCoverage.AW_Type__c</field>
            <operation>equals</operation>
            <value>Disability Monthly</value>
        </summaryFilterItems>
        <summaryForeignKey>InsurancePolicyCoverage.InsurancePolicyId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AW_TotalIncomeProtectionLumpsum__c</fullName>
        <description>This field rolls up Income Protection Lumpsum benefits from the Insurance Policy Coverage. It sums up the Amount value. We use a checkbox called Income Protection Lumpsum Benefits created on the Insurance Policy Coverage object as a filter condition, as there is a character limit for a filter condition.</description>
        <label>Total Income Protection (Lumpsum)</label>
        <summarizedField>InsurancePolicyCoverage.AW_BenefitAmount__c</summarizedField>
        <summaryFilterItems>
            <field>InsurancePolicyCoverage.AW_IncomeProtectionLumpsumBenefits__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>InsurancePolicyCoverage.InsurancePolicyId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AW_TotalIncomeProtectionMonthly__c</fullName>
        <description>This field rolls up Income Protection Monthly benefits from the Insurance Policy Coverage. It sums up the Amount value. We use a checkbox called Income Protection Monthly Benefits created on the Insurance Policy Coverage object as a filter condition, as there is a character limit for a filter condition.</description>
        <label>Total Income Protection (Monthly)</label>
        <summarizedField>InsurancePolicyCoverage.AW_BenefitAmount__c</summarizedField>
        <summaryFilterItems>
            <field>InsurancePolicyCoverage.AW_IncomeProtectionMonthlyBenefits__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>InsurancePolicyCoverage.InsurancePolicyId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AW_TotalLifeCover__c</fullName>
        <description>This field rolls up Life Cover benefits from the Insurance Policy Coverage. It sums up the Amount value. We use a checkbox called Life Cover Benefits created on the Insurance Policy Coverage object as a filter condition, as there is a character limit for a filter condition.</description>
        <label>Total Life Cover</label>
        <summarizedField>InsurancePolicyCoverage.AW_BenefitAmount__c</summarizedField>
        <summaryFilterItems>
            <field>InsurancePolicyCoverage.AW_LifeCoverBenefits__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>InsurancePolicyCoverage.InsurancePolicyId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AW_TotalLifestyleProtection__c</fullName>
        <description>This field rolls up Lifestyle Protection benefits from the Insurance Policy Coverage. It sums up the Amount value. We use a checkbox called Income Lifestyle Protection Benefits created on the Insurance Policy Coverage object as a filter condition, as there is a character limit for a filter condition.</description>
        <label>Total Lifestyle Protection</label>
        <summarizedField>InsurancePolicyCoverage.AW_BenefitAmount__c</summarizedField>
        <summaryFilterItems>
            <field>InsurancePolicyCoverage.AW_LifestyleProtectionBenefits__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>InsurancePolicyCoverage.InsurancePolicyId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AW_UpdatedByMulesoft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if updated by MuleSoft</description>
        <label>Updated by MuleSoft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_ValueAsAt__c</fullName>
        <description>Value As At Date</description>
        <label>Value as At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_AdvanceAvailable__c</fullName>
        <description>Used for integration to populate Advance Available Amount from source systems (Compass/Lifestyle)</description>
        <label>Advance Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_AdvanceType__c</fullName>
        <description>Used for integration to populate Advance Type from source systems (Compass/Lifestyle)</description>
        <label>Advance Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_AidsInclusionIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to populate Aids Inclusion Indicator from source systems (Compass/Lifestyle)</description>
        <label>Aids Inclusion Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_AssociatedContracts__c</fullName>
        <description>Used for integration to populate Associated Contracts from source systems (Compass/Lifestyle).</description>
        <label>Associated Contracts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_BankAccountHolderName__c</fullName>
        <description>Used for integration to populate Account Holder from source systems (Compass/Lifestyle)</description>
        <label>Bank Account Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_BankAccountNumber__c</fullName>
        <description>Used for integration to populate Account Number from source systems (Compass/Lifestyle)</description>
        <label>Bank Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_BankAccountType__c</fullName>
        <description>Used for integration to populate Account Type from source systems (Compass/Lifestyle)</description>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Account</fullName>
                </value>
                <value>
                    <fullName>Savings Account</fullName>
                </value>
                <value>
                    <fullName>Transmission Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_BankBranchCode__c</fullName>
        <description>Used for integration to populate Branch Code from source systems (Compass/Lifestyle)</description>
        <label>Bank Branch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_BankName__c</fullName>
        <description>Used for integration to populate Bank Name from source systems (Compass/Lifestyle)</description>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CashBackDate__c</fullName>
        <description>Used for integration to populate Cash Back Date from source systems (Compass/Lifestyle).</description>
        <label>Cash Back Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_CashBackEarned__c</fullName>
        <description>Used for integration to populate Cash Back Earned from source systems (Compass/Lifestyle)</description>
        <label>Cash Back Earned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_CashBackIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to populate Cash Back Indicator from source systems (Compass/Lifestyle).</description>
        <label>Cash Back Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_CessionaryInitials__c</fullName>
        <description>Used for integration to populate CessionaryInitials from source systems (Compass/Lifestyle)</description>
        <label>Cessionary Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CessionaryName__c</fullName>
        <description>Used for integration to populate Cessionary Name from source systems (Compass/Lifestyle)</description>
        <label>Cessionary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CessionaryTitle__c</fullName>
        <description>Used for integration to populate CessionaryTitle from source systems (Compass/Lifestyle)</description>
        <label>Cessionary Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CessionaryType__c</fullName>
        <description>Used for integration to populate Cessionary Type from source systems (Compass/Lifestyle)</description>
        <label>Cessionary Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ConditionalPartRedemptionTaken__c</fullName>
        <description>Used for integration to populate Conditional Part Redemption Taken from source systems (Compass/Lifestyle).</description>
        <label>Conditional Part Redemption Taken</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_CoverType__c</fullName>
        <description>Used for integration to populate Cover Type  from source systems (Compass/Lifestyle).</description>
        <label>Cover Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_DeathValue__c</fullName>
        <description>Used for integration to populate Gross Death Value from source systems (Compass/Lifestyle).</description>
        <label>Death Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_DebitDay__c</fullName>
        <description>Used for integration to populate Debit Day from source systems (Compass/Lifestyle)</description>
        <label>Debit Day</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_EarlyRetirementValue__c</fullName>
        <description>Used for integration to populate Early Retirement Value from source systems (Compass/Lifestyle).</description>
        <label>Early Retirement Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_EmployeeNumber__c</fullName>
        <description>Used for integration to populate Employee Number for Stop Orders from source systems (Compass/Lifestyle)</description>
        <label>Employee Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ExpiryDate__c</fullName>
        <description>Used for integration to populate Expiry Date from source systems (Compass/Lifestyle).</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_FacilityGroup__c</fullName>
        <description>Used for integration to populate Facility Group for Stop Orders from source systems (Compass/Lifestyle)</description>
        <label>Facility Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_FacilityName__c</fullName>
        <description>Used for integration to populate Facility Name for Stop Orders from source systems (Compass/Lifestyle)</description>
        <label>Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_FacilityNumber__c</fullName>
        <description>Used for integration to populate Facility Number for Stop Orders from source systems (Compass/Lifestyle)</description>
        <label>Facility Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_FacilityType__c</fullName>
        <description>Used for integration to populate Facility Type for Stop Orders from source systems (Compass/Lifestyle).</description>
        <label>Facility Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_FundValue__c</fullName>
        <description>Used for integration to populate Fund Value from source systems (Compass/Lifestyle).</description>
        <label>Fund Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_GuaranteeReviewDate__c</fullName>
        <description>Used for integration to populate Guarantee Review Date from source systems (Compass/Lifestyle).</description>
        <label>Guarantee Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_GuaranteeValue__c</fullName>
        <description>Used for integration to populate Guarantee Value from source systems (Compass/Lifestyle)</description>
        <label>Guarantee Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_IllustrativeReturnPercentage__c</fullName>
        <description>Used for integration to populate Illustrative Return % from source systems (Compass/Lifestyle).</description>
        <label>Illustrative Return %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_IllustrativeValueAge__c</fullName>
        <description>Used for integration to populate Illustrative Value Age from source systems (Compass/Lifestyle).</description>
        <label>Illustrative Value Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMN_IllustrativeValueDate__c</fullName>
        <description>Used for integration to populate Illustrative Value Date from source systems (Compass/Lifestyle).</description>
        <label>Illustrative Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_IllustrativeValueRate__c</fullName>
        <description>Used for integration to populate Illustrative Value Rate from source systems (Compass/Lifestyle).</description>
        <label>Illustrative Value Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_IllustrativeValue__c</fullName>
        <description>Used for integration to populate Illustrative Value from source systems (Compass/Lifestyle)</description>
        <label>Illustrative Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_IssueDate__c</fullName>
        <description>Used for integration to populate Issue Date from source systems (Compass/Lifestyle).</description>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_MasterAccountRecordTypeName__c</fullName>
        <description>A field created to hold the master account record type. This field will be used to share the contract with all service console users to have a read only access to the contract.</description>
        <label>Master Account Record Type Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_NextBillingDate__c</fullName>
        <description>Used for integration to populate Next Billing Date from source systems (Compass/Lifestyle)</description>
        <label>Next Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_OptionDate__c</fullName>
        <description>Used for integration to populate Option Date from source systems (Compass/Lifestyle).</description>
        <label>Option Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_OriginalCommencementDate__c</fullName>
        <description>Used for integration to populate Original Commencement Date from source systems (Compass/Lifestyle).</description>
        <label>Original Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_PackageNumber__c</fullName>
        <description>Used for integration to populate Package Number from source systems (Compass/Lifestyle).</description>
        <label>Package Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_PaidToDate__c</fullName>
        <description>Used for integration to populate Paid to Date from source systems (Compass/Lifestyle).</description>
        <label>Paid to Date</label>
        <type>Date</type>
    </fields>
</CustomObject>